<resources>
    <string name="app_name">FuelSmart</string>
    <string-array name="names">
        <item>Select the type of Fuel</item>
        <item>Unleaded 91</item>
        <item>Unleaded 95</item>
        <item>Unleaded 98</item>
        <item>Diesel</item>
    </string-array>

    <string-array name="month">
        <item>		</item>
        <item>	January	</item>
        <item>	February	</item>
        <item>	March	</item>
        <item>	April	</item>
        <item>	May	</item>
        <item>	June	</item>
        <item>	July	</item>
        <item>	August	</item>
        <item>	September	</item>
        <item>	October	</item>
        <item>	November	</item>
        <item>	December	</item>
    </string-array>

    <string name="title_activity_main_maps">MainMapsActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="select_the_type_of_fuel">Select the type of Fuel</string>
    <string name="select_month">January</string>
    <string name="pump">pump</string>
    <string name="vehicle">vehicle</string>
    <string name="location">location</string>
    <string name="profile">profile</string>
    <string name="notify">notify</string>
    <string name="pump_image">pump_image</string>
    <string name="textview">TextView</string>
</resources>